Modification de la relation avec Les superHeros associés et les pouvoirs (pour /new et /edit de Pouvoir)

--- a/templates/super_hero/index.html.twig
+++ b/templates/super_hero/index.html.twig
@@ -52,7 +52,7 @@
                                 </div>
                             </div>
                         {% else %}
-                            <span class="text-muted">Pas d'image</span>
+                            <span class="text-danger">Pas d'image</span>
                         {% endif %}
                     </td>
                     <td class="text-light">{{ super_hero.creeLe ? super_hero.creeLe|date('d/m/Y H:i') : '' }}</td>
