--- a/templates/mission/new.html.twig
+++ b/templates/mission/new.html.twig
@@ -1,11 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Mission{% endblock %}
+{% block title %}Créer une Mission{% endblock %}
 
 {% block body %}
-    <h1>Create new Mission</h1>
-
-    {{ include('mission/_form.html.twig') }}
-
-    <a href="{{ path('app_mission_index') }}">back to list</a>
+<div class="container mt-5">
+    <h1 class="text-center text-primary mb-4">Créer une Nouvelle Mission</h1>
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+    {{ form_widget(form) }}
+    <button type="submit" class="btn btn-success mt-3">Créer</button>
+    <a href="{{ path('app_mission_index') }}" class="btn btn-secondary mt-3">Retour</a>
+    {{ form_end(form) }}
+    
+</div>
 {% endblock %}
