--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,6 +61,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="{{ path('app_equipe_index') }}">Equipes</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="{{ path('app_mission_index') }}">Missions</a>
+                    </li>
                 </ul>
             </div>
         </div>
